# tc6544-project-2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS
data/: test4.tsp
experiments/: compare.py  run.py  sweep.py
literature_reviews/: README.md  abdoun-2012-adaptive-crossover-operators-tsp.md  abdoun-2012-mutation-operators-tsp.md  chehouri-2016-constraint-handling-violation-factor-ga.md  cicirello-2023-survey-evolutionary-operators-permutations.md  eremeev-2017-optimal-recombination-atsp.md  liu-2014-powerful-genetic-algorithm-tsp.md  padhye-2015-feasibility-preserving-constraint-handling.md  scholz-2019-ga-tsp-historical-review.md  thanh-2020-combination-crossover-ga-tsp.md  uray-2023-csrx-crossover-tsp.md
notebooks/: 00_literature_review.ipynb  01_problem_and_setup.ipynb  02_ga_operators.ipynb  03_repair_mechanism.ipynb  04_experiments.ipynb  04_instance_loader.ipynb  05_representation_and_fitness.ipynb  05_visualisation_and_results.ipynb  06_population_init.ipynb  07_selection.ipynb  08_crossover.ipynb  09_mutation.ipynb  10_ga_loop.ipynb  11_infeasibility_analysis.ipynb  12_repair_mechanism.ipynb  13_alternative_constraint.ipynb  14_diversity_metrics.ipynb  15_experiment_runner.ipynb  16_parameter_sweep.ipynb  17_comparative_experiment.ipynb  18_convergence_plots.ipynb  19_boxplots.ipynb  20_tour_visualization.ipynb  22_literature_review.ipynb  tc6544_datasets_comparisons.ipynb
papers/: README.md
report/: Bibliography.bib  DocumentVariables.tex  README.md  TASKS.md  Thesis.cls  (+6 more)
(+40 files in other folders)
